# MLOP_Linear

./: Dockerfile  README.md  main.py  model.pkl  model.py  pyproject.toml
.github/workflows/: main.yml  mlops.yml
