[tool.poetry]
name = "mlops-linear"
version = "0.1.0"
description = ""
authors = ["Sandy <7pandeys@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
joblib = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

